update graphy post and move to blog

--- a/blog/_posts/2015-04-30-graphy.md
+++ b/blog/_posts/2015-04-30-graphy.md
@@ -1,9 +1,11 @@
 ---
 layout: post
-section: Arcade
-title: Graphy
+section: Blog
+title: Old Code - Graphy
 ---
-Graphy is a WebGL graphing program.
+I wrote this graphing program a while ago (2011?) to test WebGL.  At the time, WebGL had only just been released and was still experimental in the browsers which supported it.
+
+Graphy plots complex functions of two real values (x and y).  The green surface represents the real part of the result, while the red surface represents the imaginary part.  A hatching effect is used as a simple order-independent transparency (OIT) solution.
 
 <div id='graphy-demo'></div>
 <script>
